--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="dropdown_menu_item_gap">8dp</dimen>
+    <dimen name="converter_input_margin">16dp</dimen>
+    <dimen name="converter_input_gap">8dp</dimen>
+</resources>
