--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,11 @@
 <resources>
     <dimen name="dropdown_menu_item_flag_code_gap">8dp</dimen>
     <dimen name="dropdown_menu_item_code_name_gap">8dp</dimen>
-    <dimen name="converter_input_margin">16dp</dimen>
+    <dimen name="converter_margin">16dp</dimen>
     <dimen name="converter_input_gap">8dp</dimen>
+    <dimen name="conversion_result_item_margin">8dp</dimen>
+    <dimen name="conversion_result_list_gap">16dp</dimen>
+    <dimen name="flag_size">32dp</dimen>
+    <dimen name="small_flag_size">24dp</dimen>
+    <dimen name="conversion_result_item_flag_gap">8dp</dimen>
 </resources>
