--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,8 @@
     <dimen name="dropdown_width">300dp</dimen>
     <dimen name="dropdown_height">300dp</dimen>
     <dimen name="swipe_background_padding">16dp</dimen>
+    <dimen name="chart_currency_gap">32dp</dimen>
+    <dimen name="chart_padding">16dp</dimen>
+    <dimen name="column_chart_width">8dp</dimen>
+    <dimen name="column_chart_switch_text_gap">16dp</dimen>
 </resources>
