--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.CurrencyConverterApp" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:navigationBarColor">@color/navigation_bar_color</item>
-    </style>
+    <style name="Theme.CurrencyConverterApp" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="Theme.CurrencyConverterApp.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/splash_bg</item>
