Redesign loading screens (from shimmer boxes to rotating coin image)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,5 @@
     <dimen name="chart_loading_base_target_controller_height">48dp</dimen>
     <dimen name="loading_time_period_dropdown_margin">24dp</dimen>
     <dimen name="loading_charts_item_gap">8dp</dimen>
+    <dimen name="coin_image_size">100dp</dimen>
 </resources>
