--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,4 +53,6 @@
     <dimen name="charts_gap_big">16.dp</dimen>
     <dimen name="charts_gap_medium">8.dp</dimen>
     <dimen name="recent_time_period_dropdown_width">200.dp</dimen>
+    <dimen name="permanent_drawer_width">180.dp</dimen>
+    <dimen name="nav_top_margin">12dp</dimen>
 </resources>
