Make text and a few other composables responsive

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -59,4 +59,5 @@
     <dimen name="nav_rail_icon_size">32dp</dimen>
     <dimen name="swap_icon_offset">20dp</dimen>
     <dimen name="charts_padding_small">8dp</dimen>
+    <dimen name="big_flag_size">40dp</dimen>
 </resources>
