Implement add currency side panel for the converter screen

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -60,4 +60,5 @@
     <dimen name="swap_icon_offset">20dp</dimen>
     <dimen name="charts_padding_small">8dp</dimen>
     <dimen name="big_flag_size">40dp</dimen>
+    <dimen name="side_panel_rounded_corner">16dp</dimen>
 </resources>
