Make the pull to refresh available for the whole screen, add info composables when there are no currencies or watchlist items

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,4 +61,5 @@
     <dimen name="charts_padding_small">8dp</dimen>
     <dimen name="big_flag_size">40dp</dimen>
     <dimen name="side_panel_rounded_corner">16dp</dimen>
+    <dimen name="watchlist_icon_big">192.dp</dimen>
 </resources>
